--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -227,3 +227,29 @@
     transform: rotate(0deg);
   }
 }
+
+.footer{
+  width:100%;
+  height:190px;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  src: url('../pages/fonts/Gilroy-Regular.ttf');
+  src: local('Gilroy'),
+      url('../pages/fonts/Gilroy-Regular.ttf') format('opentype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  src: url('../pages/fonts/Gilroy-SemiBold.ttf');
+  src: local('Gilroy'),
+      url('../pages/fonts/Gilroy-SemiBold.ttf') format('opentype');
+  font-weight: 600;
+  font-style: normal;
+}
