--- a/src/components/common/Footer/Footer.module.scss
+++ b/src/components/common/Footer/Footer.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
   max-width: 1712px;
-  height: 74px;
+  min-height: 74px;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
