--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -4,15 +4,17 @@
   justify-content: space-between;
   align-items: center;
   max-width: 100vw;
-  padding: 6rem;
   min-height: 100vh;
 }
 .footer{
-  width:100%;
+  width:1920px;
+  margin:0 auto;
   height:190px;
   display:flex;
+  flex-flow:row nowrap;
   justify-content: center;
   align-items: center;
+  background:#0E0E10;
 }
 
 @font-face {
