--- a/src/components/HowToStart/HTPCard/HTPCard.module.scss
+++ b/src/components/HowToStart/HTPCard/HTPCard.module.scss
@@ -8,11 +8,24 @@
   justify-content: flex-start;
   align-items: center;
   transition:0.3s;
+  overflow: hidden;
   &:hover{
     transition:0.3s;
     transform:translate(0, -37px);
-    background: linear-gradient(rgba(255, 255, 255, 0.015), rgba(255, 255, 255, 0.015)), url(./assets/background2.png), url(./assets/background1.png);
+    background: url(./assets/background2.png), url(./assets/background1.png);
     cursor:pointer;
+  }
+  &:hover .cover{
+    opacity:0.02;
+  }
+  .cover{
+    width:100%;
+    height:100%;
+    position:absolute;
+    top:0;
+    left:0;
+    background: #fff;
+    opacity:0;
   }
   .image {
     border-radius: 15px;
@@ -51,5 +64,10 @@
       font-weight: 500;
       line-height: 171%; /* 23.94px */
     }
+  }
+  .buyButton{
+    position:absolute;
+    top:360px;
+    left:34px;
   }
 }
