--- a/src/components/FAQ/Accordeon/Accordeon.module.scss
+++ b/src/components/FAQ/Accordeon/Accordeon.module.scss
@@ -1,9 +1,10 @@
-$duration:0.5s;
+$duration: 0.5s;
 
 .wrapper {
   width: 684px;
   height: 31px;
   margin: 0 auto 44px;
+  overflow: hidden;
   .question {
     width: 100%;
     height: fit-content;
@@ -11,59 +12,84 @@ $duration:0.5s;
     flex-flow: row nowrap;
     justify-content: space-between;
     align-items: center;
-    .title {
+    .titleInactive {
       color: #e4a520;
       font-family: Gilroy;
       font-size: 25px;
       font-style: normal;
       font-weight: 600;
       line-height: normal;
-      max-width:654px;
-      margin-bottom:3px;
+      max-width: 654px;
+      margin-bottom: 3px;
     }
-    .buttonInactive{
-        width:28px;
-        aspect-ratio: 1/1;
-        border-radius:50%;
-        border:2px solid #E4A520;
-        position:relative;
-        transition:$duration;
-        &:hover{
-            cursor:pointer;
-        }
-        .stick1Inactive{
-            width:14px;
-            height:1px;
-            background: #E4A520;
-            position:absolute;
-            top:50%;
-            left:50%;
-            transform:translate(-50%, -50%);
-            transition:$duration;
-        }
-        .stick1Active{
-            background:rgba(255, 255, 255, 0.55);
-            transition:$duration;
-        }
-        .stick2Inactive{
-            width:14px;
-            height:1px;
-            background: #E4A520;
-            position:absolute;
-            top:50%;
-            left:50%;
-            transform:translate(-50%, -50%) rotate(90deg);
-            transition:$duration;
-        }
-        .stick2Active{
-            background:rgba(255, 255, 255, 0.55);
-            opacity:0;
-            transition:$duration;
-        }
+    .titleActive{
+        color:#fff;
     }
-    .buttonActive{
-        border:2px solid rgba(255, 255, 255, 0.55);
+    .buttonInactive {
+      width: 28px;
+      aspect-ratio: 1/1;
+      border-radius: 50%;
+      border: 2px solid #e4a520;
+      position: relative;
+      transition: $duration;
+      &:hover {
+        cursor: pointer;
+      }
+      .stick1Inactive {
+        width: 14px;
+        height: 2px;
+        background: #e4a520;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         transition: $duration;
+      }
+      .stick1Active {
+        background: rgba(255, 255, 255, 0.55);
+        transition: $duration;
+      }
+      .stick2Inactive {
+        width: 14px;
+        height: 2px;
+        background: #e4a520;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) rotate(90deg);
+        transition: $duration;
+      }
+      .stick2Active {
+        background: rgba(255, 255, 255, 0.55);
+        opacity: 0;
+        transition: $duration;
+      }
+    }
+    .buttonActive {
+      border: 2px solid rgba(255, 255, 255, 0.55);
+      transition: $duration;
     }
   }
+  .answerInactive {
+    width: 100%;
+    max-height: 0px;
+    color: transparent;
+    text-align: justify;
+    font-family: Gilroy;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 172%;
+    transition:$duration;
+    overflow:hidden;
+  }
+  .answerActive{
+    color: rgba(255, 255, 255, 0.55);
+    max-height:300px;
+    margin-top:35px;
+    transition: $duration;
+  }
+}
+.wrapperActive{
+    height:auto;
 }
