--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,3 +1,11 @@
+.header{
+  display:flex;
+  flex-flow:column nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  width:1920px;
+  height:1080px;
+}
 .main {
   display: flex;
   flex-direction: column;
