--- a/src/components/SocialMedia/SocialMedia.module.scss
+++ b/src/components/SocialMedia/SocialMedia.module.scss
@@ -1,5 +1,5 @@
 .wrapper {
-  width: 1920px;
+  width: min(1920px, 100vw);
   height: 1080px;
   position: relative;
   background: radial-gradient(
