--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -3,7 +3,7 @@
   flex-flow:column nowrap;
   justify-content: flex-start;
   align-items: center;
-  width:1920px;
+  width:100vw;
   height:1080px;
   margin:0 auto;
 }
@@ -12,13 +12,13 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  max-width: 100vw;
-  min-height: 100vh;
+  width: 100vw;
+  height: auto;
 }
 .footer{
   width:1920px;
-  margin:0 auto;
   height:190px;
+  margin:0 auto;
   display:flex;
   flex-flow:row nowrap;
   justify-content: center;
