--- a/src/components/common/Footer/Footer.module.scss
+++ b/src/components/common/Footer/Footer.module.scss
@@ -6,6 +6,7 @@
   justify-content: center;
   align-items: center;
   column-gap: 72px;
+  row-gap: 30px;
   font-family: Gilroy;
   font-size: 14px;
   font-style: normal;
