--- a/src/components/Advantages/Advantages.module.scss
+++ b/src/components/Advantages/Advantages.module.scss
@@ -15,7 +15,7 @@
     height: 435px;
     top: 139px;
     left: 0px;
-    z-index:3;
+    z-index: 3;
   }
   .topRightCrossImage {
     position: absolute;
@@ -24,7 +24,7 @@
     top: 0px;
     right: 0px;
   }
-  .bottomLeftCrossImage{
+  .bottomLeftCrossImage {
     position: absolute;
     width: 346px;
     bottom: 0px;
@@ -71,8 +71,8 @@
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    position:relative;
-    z-index:2;
+    position: relative;
+    z-index: 2;
   }
   .flexContainer {
     width: min(1394px, 90vw);
@@ -81,11 +81,11 @@
     column-gap: 51px;
     margin-bottom: 103px;
     .imageBlock {
-      //max-width: 679px;
-      flex:1 1 679px;
+      flex: 1 1 679px;
       max-height: 477px;
       overflow: hidden;
       border-radius: 15px;
+      transform-origin: bottom;
       .image {
         width: 679px;
         height: 477px;
@@ -94,8 +94,8 @@
     .infoBlock {
       max-width: 664px;
       flex: 1 1 664px;
-      position:relative;
-      z-index:2;
+      position: relative;
+      z-index: 2;
       .title {
         color: #e4a520;
         font-family: Gilroy;
@@ -127,18 +127,18 @@
     flex-direction: row-reverse;
   }
 }
-@media (max-width:1260px){
-  .gunImage{
-    display:none;
+@media (max-width: 1260px) {
+  .gunImage {
+    display: none;
   }
 }
-@media (max-width:1445px){
-  .ak1Image{
-    display:none;
+@media (max-width: 1445px) {
+  .ak1Image {
+    display: none;
   }
 }
-@media (max-width:1153px){
-  .ak2Image{
-    display:none;
+@media (max-width: 1153px) {
+  .ak2Image {
+    display: none;
   }
 }
