--- a/src/components/common/PaymentModal/screens/ChosePaymentMethodScreen/ChosePaymentMethodScreen.module.scss
+++ b/src/components/common/PaymentModal/screens/ChosePaymentMethodScreen/ChosePaymentMethodScreen.module.scss
@@ -5,6 +5,7 @@
   flex-flow: column nowrap;
   justify-content: flex-start;
   align-items: flex-start;
+  gap: 25px;
   .title {
     color: #fff;
     font-family: Gilroy;
@@ -13,6 +14,54 @@
     font-weight: 700;
     line-height: 151.139%;
   }
+
+  .paymentVariants {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+    .paymentVariant {
+      width: 120px;
+      height: 98px;
+      border-radius: 7px;
+      background: rgba(32, 32, 38, 0.5);
+      display: flex;
+      flex-flow: column nowrap;
+      justify-content: center;
+      align-items: center;
+      gap: 5px;
+      &:hover{
+        cursor:pointer;
+      }
+      .icons {
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: center;
+        align-items: center;
+        gap: 5px;
+        .tricolor {
+          width: 27px;
+          height: auto;
+        }
+      }
+      .title {
+        color: rgba(234, 234, 234, 0.55);
+        text-align: center;
+        font-family: Gilroy;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 128.8%;
+      }
+    }
+    .paymentVariantActive{
+        background: rgba(255, 255, 255, 0.1);
+    }
+  }
+
   .nextScreenButton {
     width: 100%;
     height: 42px;
@@ -22,8 +71,8 @@
     flex-flow: row nowrap;
     justify-content: flex-start;
     align-items: center;
-    &:hover{
-      cursor:pointer;
+    &:hover {
+      cursor: pointer;
     }
     .cardIcon {
       width: 23px;
