--- a/src/components/SocialMedia/MediaButton/MediaButton.module.scss
+++ b/src/components/SocialMedia/MediaButton/MediaButton.module.scss
@@ -68,7 +68,13 @@
             color: rgba(255, 255, 255, 0.55); 
         }
       }
-
     }
+  }
+}
+
+@media (max-width:767px){
+  .wrapper{
+    width:312px;
+    height:92px;
   }
 }
