--- a/src/components/SocialMedia/SocialMedia.module.scss
+++ b/src/components/SocialMedia/SocialMedia.module.scss
@@ -171,3 +171,75 @@
     column-gap: 45px;
   }
 }
+
+@media (max-width:767px){
+  .wrapper{
+    min-height:0;
+    height:fit-content;
+    overflow: hidden;
+    .tiktokBackgroundBlock{
+      top:-144px;
+      left:-162px;
+      .tiktokBackground{
+        width:300px;
+        height:300px;
+      }
+    }
+    .youtubeBackgroundBlock{
+      top:299px;
+      right:-56px;
+      width:140px;
+      .youtubeBackgroundCover{
+        display:none;
+      }
+      .youtubeBackground{
+        transform:scale(1.3);
+      }
+    }
+    .telegramBackgroundBlock{
+      top:662px;
+      left:-5px;
+      width:100px;
+      height:100px;
+      .telegramBackgroundCover{
+        display:none;
+      }
+      .telegramBackground{
+        transform:rotate(30deg) scale(0.8);
+      }
+    }
+    .vkBackgroundBlock{
+      top:700px;
+      right:-93px;
+      width:220px;
+      height:220px;
+      .vkBackgroundCover{
+        width:220px;
+        height:220px;
+        transform:translate(-69%, -55%);
+      }
+      .vkBackground{
+        width:220px;
+        height:220px;
+      }
+    }
+    .content{
+      margin:41px auto 38px;
+      .title{
+        display:block;
+        font-size: 30px;
+        width:calc(100% - 110px);
+        margin:0 auto 16px;
+      }
+      .description{
+        width:calc(100% - 34px);
+        font-size:16px;
+        margin:0 auto;
+      }
+      .flexContainer{
+        margin:33px auto 38px;
+        gap:19px;
+      }
+    }
+  }
+}
