--- a/src/components/mobile/NewsMobile/NewsMobile.module.scss
+++ b/src/components/mobile/NewsMobile/NewsMobile.module.scss
@@ -1,3 +1,120 @@
-.wrapper{
-    
+.wrapper {
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  background: #0e0e10;
+  box-sizing: border-box;
+  position:relative;
+  .gunImage{
+    position:absolute;
+    top:28.3%;
+    left:0px;
+    z-index:2;
+  }
+  .akImage{
+    position:absolute;
+    top:45%;
+    right:0px;
+    z-index:2;
+  }
+  .ak2Image{
+    position:absolute;
+    top:64%;
+    left:0px;
+    z-index:2;
+  }
+  .baseballImage{
+    position:absolute;
+    top:81.7%;
+    right:0px;
+    z-index:2;
+  }
+  .gunSmallImage{
+    position:absolute;
+    top:96%;
+    left:0px;
+    z-index:2;
+  }
+  .title {
+    color: #eaeaea;
+    text-align: center;
+    font-family: Gilroy;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin: 41px 0px 44px;
+    padding: 0px 25px;
+  }
+  .newsCard {
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 21px;
+    box-sizing: border-box;
+    padding: 27px 25px 36px;
+    .subtitle {
+      color: #eaeaea;
+      text-align: center;
+      text-shadow: 0px 0px 63px rgba(255, 255, 255, 0.25);
+      font-family: Gilroy;
+      font-size: 35px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: normal;
+      display: block;
+    }
+    .yellowSubtitle {
+      color: #1a1a1e;
+    }
+    .description {
+      color: rgba(255, 255, 255, 0.55);
+      text-align: center;
+      font-family: Gilroy;
+      font-size: 18px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 196%;
+    }
+    .yellowCard {
+      color: rgba(26, 26, 30, 0.55);
+    }
+    .image {
+      width: 100%;
+      height: 22vh;
+      border-radius: 15px;
+      overflow: hidden;
+      position: relative;
+    }
+    .footer {
+      display: flex;
+      flex-flow: row nowrap;
+      justify-content: ceter;
+      align-items: center;
+      gap: 20px;
+      .date {
+        color: rgba(255, 255, 255, 0.55);
+        font-family: Gilroy;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 196%;
+      }
+      .yellowCard {
+        color: rgba(26, 26, 30, 0.55);
+      }
+    }
+  }
+  .secondCard {
+    background: #1a1a1e;
+  }
+  .thirdCard {
+    background: #e4a520;
+  }
 }
