--- a/src/components/News/Details/DetailsButton.module.scss
+++ b/src/components/News/Details/DetailsButton.module.scss
@@ -4,10 +4,31 @@
   border-radius: 7px;
   border: 1px solid #e4a520;
   background: rgba(228, 165, 32, 0.5);
-  display:flex;
+  display: flex;
   justify-content: center;
   align-items: center;
+  user-select: none;
+  &:hover {
+    background: #e4a520;
+    box-shadow: 0px 0px 27.7px 0px rgba(228, 165, 32, 0.25);
+    color: #64480c;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+  &.mouseDown {
+    background: linear-gradient(
+        0deg,
+        rgba(255, 255, 255, 0.2) 0%,
+        rgba(255, 255, 255, 0.2) 100%
+      ),
+      #e4a520;
+    box-shadow: 0px 0px 27.7px 0px rgba(228, 165, 32, 0.25);
+    color: #64480c;
+  }
+}
+.yellowButton{
+  background: rgba(26, 26, 30, 0.35);
   &:hover{
-    cursor:pointer;
+    border:1px solid black;
   }
 }
