--- a/src/components/common/Header/Header.module.scss
+++ b/src/components/common/Header/Header.module.scss
@@ -1,9 +1,9 @@
 .wrapper {
   width: min(1920px, 100%);
-  height: 1080px;
+  height: auto;
   margin: 0 auto;
   background: #0e0e10;
-  flex-basis:1920px;
+  //flex-basis:1920px;
   .header {
     width: 100%;
     height: auto;
