fix: parallax in Advantages

--- a/src/components/Advantages/Advantages.module.scss
+++ b/src/components/Advantages/Advantages.module.scss
@@ -63,7 +63,8 @@
     right: 0px;
   }
   .mainTitle {
-    margin: 99px auto 80px;
+    //margin: 99px auto 80px;
+    margin: 99px auto 180px;
     color: #eaeaea;
     text-align: center;
     font-family: Gilroy;
