--- a/src/components/Wiki/WeaponCategory/WeaponCategory.module.scss
+++ b/src/components/Wiki/WeaponCategory/WeaponCategory.module.scss
@@ -38,6 +38,8 @@
       justify-content: flex-start;
       align-items: flex-start;
       overflow: hidden;
+      position:relative;
+      z-index:3;
       .weapon {
         width: 231px;
         height: 232px;
