--- a/src/components/SocialMedia/SocialMedia.module.scss
+++ b/src/components/SocialMedia/SocialMedia.module.scss
@@ -217,6 +217,8 @@
         width:220px;
         height:220px;
         transform:translate(-69%, -55%);
+        position:relative;
+        z-index:1;
       }
       .vkBackground{
         width:220px;
@@ -239,6 +241,8 @@
       .flexContainer{
         margin:33px auto 38px;
         gap:19px;
+        position:relative;
+        z-index:10;
       }
     }
   }
