--- a/src/components/HowToStart/BuyButton/BuyButton.module.scss
+++ b/src/components/HowToStart/BuyButton/BuyButton.module.scss
@@ -22,6 +22,7 @@
     box-shadow: 0px 0px 27.7px 0px rgba(228, 165, 32, 0.25);
     color: #64480c;
     transition: 0.3s;
+    cursor:pointer;
   }
   &.mouseDown {
     background: linear-gradient(
