--- a/src/components/common/CheckBox/CheckBox.module.scss
+++ b/src/components/common/CheckBox/CheckBox.module.scss
@@ -3,10 +3,13 @@
   height: 23px;
   border-radius: 3px;
   background: #202026;
+  display:flex;
+  justify-content: center;
+  align-items: center;
   &:hover{
     cursor:pointer;
   }
 }
 .wrapperActive{
-    background:#E4A520;
+    background:rgba(228, 165, 32, 0.7);
 }
